--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,46 @@
 /* All styles for your header Components live here */
+.headerContainer {
+    max-width: 580px;
+    width: 100%;
+    height: 120px;
+    margin: 0 auto;
+    display: flex;
+    border: 1px solid red;
+    
+    
+}
+.headerContent {
+    border: 1px solid blue;
+   
+}
+.headerTitle {
+    display: flex;
+    margin-left: 20px;
+    height: 30px; 
+    
+}
+p {
+    margin-left: 20px;
+    margin-top: 0;
+    width: 89%;
+}
+.lambdaLogo {
+    width: 150px;
+    height: 40px;
+    background-color: white;
+    text-align: center;
+    padding-top: 9px;
+    border-radius: 90px;
+    border: 1px solid black;
+}
+a {
+    margin: 0 10px;
+}
+.img1 {
+
+   height: 40px;
+}
+h4 {
+    margin-top: 0;
+    
+}
