--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,21 @@
 /* All styles for your Card Components live here */
+
+ .img2 {
+     width: 490px;
+     height: 280px;
+     margin-left: 75px;
+ }
+ .cardContent h4 {
+margin-left: 90px;
+margin-bottom: 5px;
+ }
+ .cardContent p {
+     margin-bottom: 5px;
+     margin-left: 90px;
+ }
+ .cardContent a {
+    margin-left: 90px;
+    text-decoration: none;
+    color: grey
+ }
+
