--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,18 +1,8 @@
 /* All styles for your header Components live here */
 .headerContainer {
-    max-width: 580px;
-    width: 100%;
-    height: 120px;
-    margin: 0 auto;
-    display: flex;
-    border: 1px solid red;
-    
-    
+    display: flex;  
 }
-.headerContent {
-    border: 1px solid blue;
-   
-}
+
 .headerTitle {
     display: flex;
     margin-left: 20px;
@@ -22,10 +12,10 @@
 p {
     margin-left: 20px;
     margin-top: 0;
-    width: 89%;
+    width: 91%;
 }
 .lambdaLogo {
-    width: 150px;
+    width: 160px;
     height: 40px;
     background-color: white;
     text-align: center;
@@ -34,11 +24,13 @@ p {
     border: 1px solid black;
 }
 a {
+    color: grey;
+    text-decoration: none;
     margin: 0 10px;
 }
 .img1 {
 
-   height: 40px;
+   height: 36px;
 }
 h4 {
     margin-top: 0;
